# learn-swift

./: .gitignore  README.md
coreml-sklearn/: README.md
coreml-sklearn/learn-swift-basic/: ContentView.swift  SimpleClassifier.mlmodel  learn_swift_basicApp.swift  local.xcconfig.example
coreml-sklearn/learn-swift-basic.xcodeproj/: project.pbxproj
coreml-sklearn/learn-swift-basicTests/: learn_swift_basicTests.swift
coreml-sklearn/learn-swift-basicUITests/: learn_swift_basicUITests.swift  learn_swift_basicUITestsLaunchTests.swift
coreml-sklearn/python/: .gitignore  README.md  create_model.py  pyproject.toml
learn-cam/: local.xcconfig.example
learn-cam/learn-cam/: CameraPreviewView.swift  CameraViewModel.swift  ContentView.swift  Info.plist  learn-cam.entitlements  learn_camApp.swift
learn-cam/learn-cam.xcodeproj/: project.pbxproj
learn-cam/learn-camTests/: learn_camTests.swift
learn-cam/learn-camUITests/: learn_camUITests.swift  learn_camUITestsLaunchTests.swift
