[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coreml-sample"
version = "0.1.0"
description = "CoreML sample project for SwiftUI app"
requires-python = ">=3.8"
dependencies = [
    "coremltools>=6.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true 